Update repository for FastDDS 3.0.0 compatibility
Signed-off-by: Lucia Echevarria <luciaechevarria@eprosima.com>

--- a/cpp_utils/package.xml
+++ b/cpp_utils/package.xml
@@ -17,7 +17,7 @@
 
   <buildtool_depend>cmake</buildtool_depend>
 
-  <depend>fastrtps</depend>
+  <depend>fastdds</depend>
   <depend>cmake_utils</depend>
 
   <doc_depend>doxygen</doc_depend>
