--- a/cpp_utils/test/unittest/memory/CMakeLists.txt
+++ b/cpp_utils/test/unittest/memory/CMakeLists.txt
@@ -35,7 +35,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
     )
 
 add_unittest_executable(
@@ -67,7 +67,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
     )
 
 add_unittest_executable(
@@ -103,7 +103,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
     )
 
 add_unittest_executable(
