--- a/cpp_utils/test/unittest/time/CMakeLists.txt
+++ b/cpp_utils/test/unittest/time/CMakeLists.txt
@@ -36,7 +36,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
         $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
@@ -69,7 +69,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
     )
 
 add_unittest_executable(
@@ -102,7 +102,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
     )
 
 add_unittest_executable(
