--- a/cpp_utils/test/unittest/utils/CMakeLists.txt
+++ b/cpp_utils/test/unittest/utils/CMakeLists.txt
@@ -43,7 +43,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
         $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
