--- a/cpp_utils/test/unittest/wait/CMakeLists.txt
+++ b/cpp_utils/test/unittest/wait/CMakeLists.txt
@@ -34,7 +34,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
         cpp_utils
     )
 
@@ -66,7 +66,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
         cpp_utils
     )
 
@@ -97,7 +97,7 @@ set(TEST_LIST
 
 set(TEST_EXTRA_LIBRARIES
         fastcdr
-        fastrtps
+        fastdds
         cpp_utils
     )
 
