Support multiple versions of Fast DDS in CI
Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

--- a/.github/actions/project_dependencies/action.yml
+++ b/.github/actions/project_dependencies/action.yml
@@ -7,6 +7,18 @@ inputs:
     description: Specify runs-on machine to download specific artifact
     required: true
 
+  custom_version_build:
+    description: >
+      Use the custom version build from eProsima-CI.
+      If set to false, the workflow will run the tests for Fast DDS v2 and v3.
+    required: true
+    type: choice
+    default: 'custom'
+    options:
+      - custom
+      - v2
+      - v3
+
   cmake_build_type:
     description: Specify cmake_build_type option to download specific artifact
     required: true
