--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,14 +9,14 @@ jobs:
 
   reusable_tests_v2:
     name: reusable_tests_v2
-    uses: eProsima/DDS-Pipe/.github/workflows/reusable-workflow.yml@ci/fastdds-version
+    uses: eProsima/dev-utils/.github/workflows/reusable-workflow.yml@ci/fastdds-version
     with:
       custom_version_build: 'v2'
       dependencies_artifact_postfix: '_nightly'
 
   reusable_tests_v3:
     name: reusable_tests_v3
-    uses: eProsima/DDS-Pipe/.github/workflows/reusable-workflow.yml@ci/fastdds-version
+    uses: eProsima/dev-utils/.github/workflows/reusable-workflow.yml@ci/fastdds-version
     with:
       custom_version_build: 'v3'
       dependencies_artifact_postfix: '_nightly'
