--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -91,6 +91,7 @@ jobs:
         with:
           os: ${{ matrix.os }}
           cmake_build_type: ${{ matrix.cmake_build_type }}
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -121,6 +122,7 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -151,6 +153,7 @@ jobs:
         with:
           os: ubuntu-20.04
           cmake_build_type: Release
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -178,6 +181,7 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -207,6 +211,7 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -236,6 +241,7 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
+          custom_version_build: ${{ github.event.inputs.custom_version_build }}
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
