--- a/.github/actions/project_dependencies/action.yml
+++ b/.github/actions/project_dependencies/action.yml
@@ -7,6 +7,18 @@ inputs:
     description: Specify runs-on machine to download specific artifact
     required: true
 
+  custom_version_build:
+    description: >
+      Use the custom version build from eProsima-CI.
+      If set to false, the workflow will run the tests for Fast DDS v2 and v3.
+    required: true
+    type: choice
+    default: 'custom'
+    options:
+      - custom
+      - v2
+      - v3
+
   cmake_build_type:
     description: Specify cmake_build_type option to download specific artifact
     required: true
@@ -43,7 +55,7 @@ runs:
     - name: Download dependencies artifact
       uses: eProsima/eProsima-CI/multiplatform/download_dependency@v0
       with:
-        artifact_name: built_fastdds_${{ inputs.os }}_${{ inputs.cmake_build_type }}${{ inputs.dependencies_artifact_postfix }}
+        artifact_name: built_fastdds_${{ inputs.custom_version_build }}_${{ inputs.os }}_${{ inputs.cmake_build_type }}${{ inputs.dependencies_artifact_postfix }}
         workflow_source: build_fastdds.yml
         workflow_source_repository: eProsima/eProsima-CI
         target_workspace: ${{ inputs.target_workspace }}
