--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
 
   reusable_tests:
     name: reusable_tests
-    uses: eProsima/dev-utils/.github/workflows/reusable-workflow.yml
+    uses: ./.github/workflows/reusable-workflow.yml
     with:
       custom_version_build: ${{ github.event.inputs.custom_version_build || 'v2' }}
       dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || '_nightly' }}
