--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -43,16 +43,18 @@ on:
 
       custom_version_build:
         description: >
-          Use the custom version build from eProsima-CI.
-          If set to false, the workflow will run the tests for Fast DDS v2 and v3.
+          Version of Fast DDS build from eProsima-CI.
         required: true
         type: string
+        default: 'v2'
 
       dependencies_artifact_postfix:
-        description: 'Postfix name to add to artifact name to download dependencies. This is use to download a specific artifact version from eProsima-CI.'
+        description: >
+          Postfix name to add to artifact name to download dependencies.
+          This is use to download a specific artifact version from eProsima-CI.
         required: true
-        default: '_nightly'
         type: string
+        default: '_nightly'
 
 env:
   code_packages_names: 'cmake_utils cpp_utils py_utils'
@@ -86,13 +88,18 @@ jobs:
         with:
           path: src
 
+      - name: test input version build
+        run: |
+          echo "custom_version_build: ${{ inputs.custom_version_build }}"
+          echo "dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}"
+
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
         with:
           os: ${{ matrix.os }}
           cmake_build_type: ${{ matrix.cmake_build_type }}
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -122,8 +129,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -153,8 +160,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -181,8 +188,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -211,8 +218,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -241,8 +248,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
