Use same branch reusable workflow (#106)
* Use same branch reusable workflow

Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

* Change custom version intput in project dependencies action

Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

* Test inputsç

Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

* Remove debug jobs

Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

---------

Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -43,16 +43,18 @@ on:
 
       custom_version_build:
         description: >
-          Use the custom version build from eProsima-CI.
-          If set to false, the workflow will run the tests for Fast DDS v2 and v3.
+          Version of Fast DDS build from eProsima-CI.
         required: true
         type: string
+        default: 'v2'
 
       dependencies_artifact_postfix:
-        description: 'Postfix name to add to artifact name to download dependencies. This is use to download a specific artifact version from eProsima-CI.'
+        description: >
+          Postfix name to add to artifact name to download dependencies.
+          This is use to download a specific artifact version from eProsima-CI.
         required: true
-        default: '_nightly'
         type: string
+        default: '_nightly'
 
 env:
   code_packages_names: 'cmake_utils cpp_utils py_utils'
@@ -91,8 +93,8 @@ jobs:
         with:
           os: ${{ matrix.os }}
           cmake_build_type: ${{ matrix.cmake_build_type }}
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -122,8 +124,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -153,8 +155,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -181,8 +183,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -211,8 +213,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
@@ -241,8 +243,8 @@ jobs:
         with:
           os: ubuntu-22.04
           cmake_build_type: Release
-          custom_version_build: ${{ github.event.inputs.custom_version_build }}
-          dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix }}
+          custom_version_build: ${{ inputs.custom_version_build }}
+          dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
