--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,6 +13,7 @@ jobs:
     with:
       custom_version_build: 'v2'
       dependencies_artifact_postfix: '_nightly'
+    secrets: inherit
 
   # Uncomment this block to run the tests for Fast DDS v3 when dev-utils is updated
   # reusable_tests_v3:
@@ -21,3 +22,4 @@ jobs:
   #   with:
   #     custom_version_build: 'v3'
   #     dependencies_artifact_postfix: '_nightly'
+  #   secrets: inherit
