--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,4 @@ jobs:
     with:
       custom_version_build: ${{ github.event.inputs.custom_version_build || 'v2' }}
       dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || '_nightly' }}
+    secrets: inherit
