--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,17 +9,16 @@ jobs:
 
   reusable_tests_v2:
     name: reusable_tests_v2
-    uses: ./.github/workflows/reusable-workflow.yml
+    uses: ./.github/workflows/reusable-workflow.yml@0.x
     with:
       custom_version_build: 'v2'
       dependencies_artifact_postfix: '_nightly'
     secrets: inherit
 
-  # Uncomment this block to run the tests for Fast DDS v3 when dev-utils is updated
-  # reusable_tests_v3:
-  #   name: reusable_tests_v3
-  #   uses: ./.github/workflows/reusable-workflow.yml
-  #   with:
-  #     custom_version_build: 'v3'
-  #     dependencies_artifact_postfix: '_nightly'
-  #   secrets: inherit
+  reusable_tests_v3:
+    name: reusable_tests_v3
+    uses: ./.github/workflows/reusable-workflow.yml@main
+    with:
+      custom_version_build: 'v3'
+      dependencies_artifact_postfix: '_nightly'
+    secrets: inherit
