--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,5 +21,5 @@ jobs:
         uses: eProsima/eProsima-CI/external/mirror-branch-action@v0
         with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
-            source: 'master'
+            source: 'main'
             dest: ${{ matrix.dest_branch }}
