--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,16 +9,18 @@ jobs:
 
   reusable_tests_v2:
     name: reusable_tests_v2
-    uses: eProsima/dev-utils/.github/workflows/reusable-workflow.yml@0.x
+    uses: ./.github/workflows/reusable-workflow.yml
     with:
       custom_version_build: 'v2'
       dependencies_artifact_postfix: '_nightly'
+      ref: '0.x'
     secrets: inherit
 
   reusable_tests_v3:
     name: reusable_tests_v3
-    uses: eProsima/dev-utils/.github/workflows/reusable-workflow.yml@main
+    uses: ./.github/workflows/reusable-workflow.yml
     with:
       custom_version_build: 'v3'
       dependencies_artifact_postfix: '_nightly'
+      ref: 'main'
     secrets: inherit
