--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,5 @@ jobs:
     with:
       custom_version_build: ${{ github.event.inputs.custom_version_build || 'v3' }}
       dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || '_nightly' }}
+      ref: ${{ github.ref }}
     secrets: inherit
