--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -56,6 +56,13 @@ on:
         type: string
         default: '_nightly'
 
+      ref:
+        description: >
+          The branch or tag name to checkout.
+        required: true
+        type: string
+        default: 'main'
+
 env:
   code_packages_names: 'cmake_utils cpp_utils py_utils'
   cpp_packages_names: 'cmake_utils cpp_utils'
@@ -87,6 +94,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
@@ -118,6 +126,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
@@ -149,6 +158,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
@@ -177,6 +187,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
@@ -207,6 +218,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
@@ -237,6 +249,7 @@ jobs:
         uses: eProsima/eProsima-CI/external/checkout@v0
         with:
           path: src
+          ref: ${{ inputs.ref }}
 
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
