--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -113,7 +113,7 @@ jobs:
           workspace_dependencies: './install'
           ctest_args: --label-exclude "xfail"
           colcon_meta_file: ./src/.github/workflows/configurations/${{ runner.os }}/colcon.meta
-          test_report_artifact: test_report_${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}_${{ matrix.os }}_${{ matrix.cmake_build_type }}
+          test_report_artifact: test_report${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}_${{ matrix.os }}_${{ matrix.cmake_build_type }}
 
 
 #####################################################################
@@ -146,7 +146,7 @@ jobs:
           ctest_args: --label-exclude "xfail|xasan"
           workspace_dependencies: './install'
           cmake_build_type: Debug
-          test_report_artifact: test_report_asan_${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
+          test_report_artifact: test_report_asan${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
 
 
 #####################################################################
@@ -182,7 +182,7 @@ jobs:
           ctest_args: --label-exclude "xfail|xtsan"
           workspace_dependencies: './install'
           cmake_build_type: Debug
-          test_report_artifact: test_report_asan_${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
+          test_report_artifact: test_report_tsan${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
 
 
 #####################################################################
@@ -243,6 +243,7 @@ jobs:
         with:
           packages_names: ${{ env.cpp_packages_names }}
           workspace_dependencies: './install'
+          test_report_artifact: test_report_coverage${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
           codecov_token: ${{ secrets.CODECOV_TOKEN }}
           codecov_fix_file_path: ./src/codecov.yml
 
@@ -278,7 +279,7 @@ jobs:
           workspace_dependencies: './install'
           ctest_args: --label-regex "xfail"
           colcon_meta_file: ./src/.github/workflows/configurations/${{ runner.os }}/colcon.meta
-          test_report_artifact: test_report_flaky_${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
+          test_report_artifact: test_report_flaky${{ inputs.dependencies_artifact_postfix }}_${{ inputs.custom_version_build }}
 
 #####################################################################
 # UNCRUSTIFY
