--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(macros)
 add_subdirectory(math)
 add_subdirectory(math/random)
 add_subdirectory(memory)
+add_subdirectory(qos)
 add_subdirectory(return_code)
 add_subdirectory(ros2_mangling)
 add_subdirectory(testing)
