--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -1,7 +1,7 @@
 # Reusable workflow to run the following jobs:
 #
 #   - multiplatform-tests
-#     - [ ubuntu-22.04 | ubuntu-24.04 | windows-2019 | windows-2022 ]
+#     - [ ubuntu-22.04 | ubuntu-24.04 | windows-2022 ]
 #     - [ Debug | Release ]
 #     - execute tests in different versions of ubuntu with different build types
 #
@@ -85,7 +85,6 @@ jobs:
         os:
           - ubuntu-22.04
           - ubuntu-24.04
-          - windows-2019
           - windows-2022
 
     steps:
