--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,8 @@ on:
 
       custom_version_build:
         description: >
-          Select Fast DDS version build from eProsima-CI.
+          Use the custom version build from eProsima-CI.
+          If set to false, the workflow will run the tests for Fast DDS v2 and v3.
         required: true
         type: choice
         default: 'custom'
@@ -28,11 +29,20 @@ on:
 
 jobs:
 
-  reusable_tests:
+  reusable_tests_ubuntu:
     name: reusable_tests
-    uses: ./.github/workflows/reusable-workflow.yml
+    uses: ./.github/workflows/reusable-ubuntu-ci.yml
     with:
-      custom_version_build: ${{ github.event.inputs.custom_version_build || 'v3' }}
-      dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || '_nightly' }}
+      custom_version_build: ${{ inputs.custom_version_build || 'v3' }}
+      dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix || '_nightly' }}
+      ref: ${{ github.ref }}
+    secrets: inherit
+
+  reusable_tests_windows:
+    name: reusable_tests
+    uses: ./.github/workflows/reusable-windows-ci.yml
+    with:
+      custom_version_build: ${{ inputs.custom_version_build || 'v3' }}
+      dependencies_artifact_postfix: ${{ inputs.dependencies_artifact_postfix || '_nightly' }}
       ref: ${{ github.ref }}
     secrets: inherit
