--- a/.github/actions/project_dependencies/action.yml
+++ b/.github/actions/project_dependencies/action.yml
@@ -41,18 +41,18 @@ runs:
   steps:
 
     - name: Install Fast DDS dependencies
-      uses: eProsima/eProsima-CI/multiplatform/install_fastdds_dependencies@v0
+      uses: eProsima/eProsima-CI/multiplatform/install_fastdds_dependencies@main
       with:
         cmake_build_type: ${{ inputs.cmake_build_type }}
 
     - name: Install yaml cpp dependency
-      uses: eProsima/eProsima-CI/multiplatform/install_yamlcpp@v0
+      uses: eProsima/eProsima-CI/multiplatform/install_yamlcpp@main
       with:
         cmake_build_type: ${{ inputs.cmake_build_type }}
 
     # Fast DDS artifact
     - name: Download dependencies artifact
-      uses: eProsima/eProsima-CI/multiplatform/download_dependency@v0
+      uses: eProsima/eProsima-CI/multiplatform/download_dependency@main
       with:
         artifact_name: build_fastdds_${{ inputs.custom_version_build }}_${{ inputs.os }}_${{ inputs.cmake_build_type }}${{ inputs.dependencies_artifact_postfix }}
         workflow_source: build_fastdds.yml
